changing img url with external site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src//assets/LOGO/lo1.PNG" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/djeorsh5d/image/upload/v1751247104/lo1_qbfpfj.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <title>DKSHOTIT STUDIO & PHOTOGRAPHY</title>
